added Version 6 - toggleAll method

--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>TodoList</title>
+    <link rel="stylesheet" type="text/css" href="todos.css" />
+
 </head>
 <body>
-    <h1>TodoList</h1>
+    <h1 class="title">TodoList App</h1>
+    
 
     <script src="todo.js"></script>
 </body>
