--- a/index.html
+++ b/index.html
@@ -9,7 +9,39 @@
 
 </head>
 <body>
-    <h1 class="title">TodoList App</h1>
+
+    <div class="container">
+        <div id="title">
+            <h1 class="title">TodoList</h1>
+        </div>
+
+        <div>
+            <button onclick="handlers.displayTodos()">Display Todo</button>
+            <button onclick="handlers.toggleAll()">Toggle All</button>
+        </div>
+
+        <div>
+            <input id="todoTextInput" type="text">
+            <button onclick ="handlers.addTodo()">Add</button>
+        </div>
+
+        <div>
+            <input id="changeTodoPositionInput" type="number">
+            <input id="changeTodoTextInput" type="text">
+            <button onclick="handlers.changeTodo()">Change Todo</button>
+        </div>
+
+        <div>
+            <input id="deleteTodoPositionInput" type="number">
+            <button onclick="handlers.deleteTodo()">Delete</button>
+        </div>
+            <input id="togglePositionInput" type="number">
+            <button onclick="handlers.toggleCompleted()">Toggle Completed</button>
+        <div>
+
+        </div>
+    </div>
+   
     
 
     <script src="todo.js"></script>
