--- a/index.html
+++ b/index.html
@@ -1,49 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>TodoList</title>
-    <link rel="stylesheet" type="text/css" href="todos.css" />
-
+    <link rel="stylesheet" type="text/css" href="todos.css">
+    <title>Todo List</title>
 </head>
-<body>
 
+<body>
     <div class="container">
         <div id="title">
-            <h1 class="title">TodoList</h1>
+            <h1>Todo List</h1>
         </div>
 
-        <div>
-            <button onclick="handlers.displayTodos()">Display Todo</button>
+        <div class="section">
+            <button onclick="handlers.displayTodos()">Display</button>
             <button onclick="handlers.toggleAll()">Toggle All</button>
+        </div>    
+
+        <div class="section">
+            <input id="inputTodoText" type="text">
+            <button onclick="handlers.addTodo()">Add</button>
         </div>
 
-        <div>
-            <input id="todoTextInput" type="text">
-            <button onclick ="handlers.addTodo()">Add</button>
-        </div>
-
-        <div>
-            <input id="changeTodoPositionInput" type="number">
+        <div class="section">
+            <input id="changeTodoPoistionInput" type="number">
             <input id="changeTodoTextInput" type="text">
-            <button onclick="handlers.changeTodo()">Change Todo</button>
+            <button onclick="handlers.changeTodo()">Change</button>
         </div>
 
-        <div>
+        <div class="section">
+            <input type="number" id="toggleCompletedPositionInput">
+            <button onclick="handlers.toggleCompleted()">Toggle Completed</button>
+        </div>
+
+        <div class="section">
             <input id="deleteTodoPositionInput" type="number">
             <button onclick="handlers.deleteTodo()">Delete</button>
         </div>
-            <input id="togglePositionInput" type="number">
-            <button onclick="handlers.toggleCompleted()">Toggle Completed</button>
-        <div>
 
+        <div class="section">
+            <ul>
+
+            </ul>
         </div>
+
     </div>
-   
-    
+
 
     <script src="todo.js"></script>
+
 </body>
+
 </html>
+
+
+
